# rust-blog

./: Cargo.toml  Readme.md
assets/: styles.css
inputs/: test.md  test_2.md
outputs/: index.html  test.html  test_2.html
posts/: test.md
src/: args.rs  assets.rs  build.rs  format.rs  highlight.rs  index.rs  main.rs  posts.rs  server.rs  templates.rs  watch.rs
templates/: base.html  document.html  index.html
