[package]
name = "markdown-blog"
version = "0.1.0"
authors = ["Mariusz Sielski <sielakos@localhost.localdomain>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = "0.8.0"
syntect = "4.5.0"
anyhow = "1.0"
tera = "1"
notify = "4"
actix-web = "3"
actix-files = "0.5"
actix = "0.10"
fs_extra = "1.2"
serde = "1"
structopt = "0.3"